--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -124,3 +124,8 @@ img{
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
 }
+
+.vl {
+    border-left: 4px solid #999;
+    height: auto;
+  }
